# flutter-simple-edge-detection

./: .gitattributes  .gitignore  .metadata  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/flutterclutter/simple_edge_detection/: SimpleEdgeDetectionPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: camera_view.dart  edge_detection_preview.dart  edge_detector.dart  image_preview.dart  image_view.dart  main.dart  scan.dart
example/lib/edge_detection_shape/: animated_touch_bubble_part.dart  edge_detection_shape.dart  edge_painter.dart  magnifier.dart  magnifier_painter.dart  touch_bubble.dart
example/test/: widget_test.dart
ios/: simple_edge_detection.podspec
ios/Classes/: SimpleEdgeDetectionPlugin.h  SimpleEdgeDetectionPlugin.m  SwiftSimpleEdgeDetectionPlugin.swift  edge_detector.cpp  edge_detector.hpp  image_processor.cpp  image_processor.hpp  native_edge_detection.cpp  native_edge_detection.hpp
ios/opencv2.framework/Versions/A/Headers/: AKAZE.h  ANN_MLP.h  AgastFeatureDetector.h  Algorithm.h  AlignExposures.h  AlignMTB.h  ArrayUtil.h  BFMatcher.h  BOWImgDescriptorExtractor.h  BOWKMeansTrainer.h  BOWTrainer.h  BRISK.h  BackgroundSubtractor.h  Boost.h  (+134 more)
lib/: edge_detection.dart
test/: simple_edge_detection_test.dart
(+11 files in other folders)
